Fix review issues
Fix overflowing text in json pretty output

--- a/resources/sass/syntaxhighlight.scss
+++ b/resources/sass/syntaxhighlight.scss
@@ -14,6 +14,9 @@
         position: absolute;
         left: -30px;
     }
+    .vjs-value {
+        @extend .text-break;
+    }
     .vjs-value__null,
     .vjs-value__number,
     .vjs-value__boolean {
